--- a/index.html
+++ b/index.html
@@ -39,44 +39,26 @@
   <div id="home" class="hidden center-outer">
     <div class="center-inner home-content">
       <h1 class="home-title">Memory Match</h1>
+      <button class="btn start-btn orange-btn" id="startBtn">Start</button>
+      <!-- बीच में banner ad -->
+      <div class="home-banner-ad">
+        <!-- यहाँ ad script या demo banner डालें -->
+        <span>Banner Ad (Middle)</span>
+      </div>
       <!-- Top Ad -->
       <div class="home-ad home-ad-top">
-              </div>
-      <button class="btn start-btn orange-btn" id="startBtn">Start</button>
-      
-      <!-- New Ads below Start button -->
-      <div style="margin-top:0.5in; display:flex; flex-direction:column; align-items:center;">
-        <!-- First Ad (as given) -->
-        <div style="margin-bottom:10px;">
-              </div>
-        <!-- Second Ad (as given) -->
-        <div>
-          <script type="text/javascript">
-          <script type="text/javascript">
-          atOptions = {
-            'key' : '3606c322c11ecc95fb215e54122b24b9',
-            'format' : 'iframe',
-            'height' : 250,
-            'width' : 300,
-            'params' : {}
-          };
-        </script>
-        <script type="text/javascript" src="//www.highperformanceformat.com/3606c322c11ecc95fb215e54122b24b9/invoke.js"></script>
-     </div>
-     </div>
-      
+        <!-- Ad script here -->
+      </div>
       <!-- Bottom Ad -->
       <div class="home-ad home-ad-bottom">
-        <script type="text/javascript">
-          atOptions = {
-            'key' : '8a596a14d2ea184cd9b6372e267b931c',
-            'format' : 'iframe',
-            'height' : 50,
-            'width' : 320,
-            'params' : {}
-          };
-        </script>
-        <script type="text/javascript" src="//www.highperformanceformat.com/8a596a14d2ea184cd9b6372e267b931c/invoke.js"></script>
+        <!-- Ad script here -->
+      </div>
+    </div>
+    <!-- Footer के ऊपर banner ad -->
+    <div class="footer-banner-ad">
+      <!-- यहाँ ad script या demo banner डालें -->
+      <span>Banner Ad (Footer Top)</span>
+    </div>
     <footer>
       <span class="powered">Powered by <span>NAS</span></span>
     </footer>
