--- a/index.html
+++ b/index.html
@@ -43,7 +43,16 @@
       <!-- बीच में banner ad -->
       <div class="home-banner-ad">
         <!-- यहाँ ad script या demo banner डालें -->
-        <span>Banner Ad (Middle)</span>
+        <script type="text/javascript">
+	atOptions = {
+		'key' : '3606c322c11ecc95fb215e54122b24b9',
+		'format' : 'iframe',
+		'height' : 250,
+		'width' : 300,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/3606c322c11ecc95fb215e54122b24b9/invoke.js"></script>
       </div>
       <!-- Top Ad -->
       <div class="home-ad home-ad-top">
@@ -57,7 +66,16 @@
     <!-- Footer के ऊपर banner ad -->
     <div class="footer-banner-ad">
       <!-- यहाँ ad script या demo banner डालें -->
-      <span>Banner Ad (Footer Top)</span>
+      <script type="text/javascript">
+	atOptions = {
+		'key' : '8a596a14d2ea184cd9b6372e267b931c',
+		'format' : 'iframe',
+		'height' : 50,
+		'width' : 320,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/8a596a14d2ea184cd9b6372e267b931c/invoke.js"></script>
     </div>
     <footer>
       <span class="powered">Powered by <span>NAS</span></span>
