--- a/ad.html
+++ b/ad.html
@@ -5,7 +5,6 @@
   <title>Blue Gradient Blur Screen with Timer & Orange Back</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    /* Styles from original file - assume they are still correct or will be provided if needed */
     html, body { height: 100%; margin: 0; padding: 0; box-sizing: border-box; }
     body { min-height: 100vh; width: 100vw; position: relative; background: linear-gradient(135deg, #0a2a88 0%, #00c6fb 100%);}
     .bg-gradient { position: fixed; inset: 0; width: 100vw; height: 100vh; z-index: 0; background: linear-gradient(135deg, #0a2a88 0%, #00c6fb 100%); filter: blur(22px); pointer-events: none;}
@@ -52,15 +51,22 @@
         timerDiv.textContent = timer;
       } else {
         clearInterval(interval);
+        // Set reward in localStorage
+        localStorage.setItem('adRewardReady', 'true');
         timerDiv.innerHTML = `
-          <button class="back-btn" onclick="window.history.back()" aria-label="Back">
+          <button class="back-btn" id="backBtn" aria-label="Back">
             <svg viewBox="0 0 24 24">
               <polyline points="15 18 9 12 15 6" stroke="white" stroke-width="2.5" fill="none" stroke-linecap="round" stroke-linejoin="round"/>
             </svg>
           </button>
         `;
-        rewardLabel.textContent = "🎁 Reward Guaranteed"; // Update text
-        rewardLabel.classList.add('show'); // Make it visible
+        rewardLabel.textContent = "🎁 Reward Guaranteed";
+        rewardLabel.classList.add('show');
+        // Add event listener to back button
+        document.getElementById('backBtn').onclick = function() {
+          // Go back to previous page (game)
+          window.history.back();
+        };
       }
     }, 1000);
   </script>
