--- a/ad.html
+++ b/ad.html
@@ -51,8 +51,8 @@
         timerDiv.textContent = timer;
       } else {
         clearInterval(interval);
-        // Set reward in localStorage for the game to detect
-        localStorage.setItem('adRewardReady', 'true');
+        // ✅ REWARD LOGIC: Set reward flag for index.html to detect
+        localStorage.setItem("rewardReady", "yes");
         timerDiv.innerHTML = `
           <button class="back-btn" id="backBtn" aria-label="Back">
             <svg viewBox="0 0 24 24">
@@ -62,9 +62,7 @@
         `;
         rewardLabel.textContent = "🎁 Reward Guaranteed";
         rewardLabel.classList.add('show');
-        // Add event listener to back button
         document.getElementById('backBtn').onclick = function() {
-          // Go back to previous page (game)
           window.history.back();
         };
       }
